added new methods inside folder, storage classes and debugging
